--- a/app/src/main/res/layout/activity_tentang_kami.xml
+++ b/app/src/main/res/layout/activity_tentang_kami.xml
@@ -32,6 +32,7 @@
             android:layout_marginLeft="20dp"
             android:textColor="#06956D"
             android:layout_marginTop="12dp"
+            android:textAllCaps="false"
             android:background="@drawable/contentig"
             android:text="@string/sccpwt"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:textAllCaps="false"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="12dp"
             android:padding="10dp"
@@ -88,14 +90,18 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
+
                     android:id="@+id/rafiud"
                     android:layout_height="match_parent">
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/circleImageView25"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="10dp"
+
                         android:src="@drawable/masfiud"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +127,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
-                        android:layout_marginTop="8dp"
+
                         android:fontFamily="@font/roboto"
                         android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView25"
@@ -146,7 +152,9 @@
                         android:id="@+id/circleImageView26"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:src="@drawable/gawang"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -172,7 +180,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
-                        android:layout_marginTop="8dp"
+
                         android:fontFamily="@font/roboto"
                         android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView26"
@@ -196,7 +204,9 @@
                         android:id="@+id/circleImageView27"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:src="@drawable/masdafa"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -223,7 +233,7 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:fontFamily="@font/roboto"
-                        android:layout_marginTop="8dp"
+
                         android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView27"
                         app:layout_constraintTop_toBottomOf="@+id/textView57"
@@ -246,7 +256,9 @@
                         android:id="@+id/circleImageView28"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:src="@drawable/fakhrul"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -264,7 +276,7 @@
                         android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView28"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:text=" Fakhrul Zakaria" />
+                        android:text="Fakhrul Zakaria" />
 
                     <TextView
                         android:id="@+id/textView68"
@@ -272,7 +284,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
-                        android:layout_marginTop="8dp"
+
                         android:fontFamily="@font/roboto"
                         android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView28"
@@ -297,7 +309,9 @@
                         android:id="@+id/circleImageView2"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:src="@drawable/faresa"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -324,7 +338,7 @@
                         android:layout_marginStart="12dp"
                         android:fontFamily="@font/roboto"
                         android:layout_marginLeft="12dp"
-                        android:layout_marginTop="8dp"
+
                         android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView2"
                         app:layout_constraintTop_toBottomOf="@+id/textView5"
@@ -347,7 +361,9 @@
                         android:id="@+id/circleImageView281"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:src="@drawable/sindi"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -372,7 +388,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
-                        android:layout_marginTop="8dp"
+
                         android:fontFamily="@font/roboto"
                         android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView281"
@@ -396,7 +412,9 @@
                         android:id="@+id/circleImageView22"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:src="@drawable/bagas"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -422,7 +440,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
-                        android:layout_marginTop="8dp"
+
                         android:textSize="14sp"
                         android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView22"
@@ -447,7 +465,9 @@
                         android:id="@+id/circleImageView23"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:src="@drawable/yudhan"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -473,7 +493,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
-                        android:layout_marginTop="8dp"
+
                         android:textSize="14sp"
                         android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView23"
@@ -498,7 +518,9 @@
                         android:id="@+id/circleImageView24"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:src="@drawable/dafa"
 
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -525,7 +547,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
-                        android:layout_marginTop="8dp"
+
                         android:textSize="14sp"
                         android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView24"
